<resources>
    <string name="app_name" translatable="false">Ronaker</string>
    <string name="caption_title" translatable="false">Text</string>
    <string name="text_content" translatable="false">content</string>
    <string name="title_defult_price" translatable="false">€0</string>
    <string name="google_api_key_me" translatable="false">AIzaSyDkts8M7csFpvL_WMulqK2WJaXiJhYV0yo</string>
    <string name="versionNameFormat" formatted="true" translatable="false">--Version V%1$s--</string>
    <string name="text_lend_request_accepted" formatted="true">Your request was accepted by %1$s</string>
    <string name="text_lend_request_started" formatted="true">You started renting %1$s item</string>
    <string name="text_rent_request_accepted" formatted="true">You accepted %1$s request</string>
    <string name="text_rent_request_started" formatted="true">%1$s started renting your item</string>
    <string name="text_lend_request_pending" formatted="true">Pending to accept from %1$s</string>
    <string name="text_rent_request_pending">Someone requested to rent your item</string>
    <string name="text_order_message" formatted="true">Hi I\'m %1$s\n I want to rent your %2$s for %3$s day\'s.\nThank you.</string>
    <string name="text_rent_canceled">List | Canceled order</string>
    <string name="text_rent_complete">List | Completed order</string>
    <string name="text_rent_rejected">List | Rejected order</string>
    <string name="text_lend_canceled">Rent | Canceled order</string>
    <string name="text_lend_complete">Rent | Completed order</string>
    <string name="text_lend_rejected">Rent | Rejected order</string>
    <string name="hint_0000_0000_0000_0000" translatable="false">0000 0000 0000 0000</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter your email</string>
    <string name="first_name_title">First name</string>
    <string name="first_name_hint">Enter your first name</string>
    <string name="last_name_title">Last name</string>
    <string name="last_name_hint">Enter your last name</string>
    <string name="password_title">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="title_menu_explore">Explore</string>
    <string name="title_menu_orders">Orders</string>
    <string name="title_menu_items">Items</string>
    <string name="title_menu_inbox">Inbox</string>
    <string name="title_menu_profile">Profile</string>
    <string name="title_button_set_dates">Set dates</string>
    <string name="title_search_here">Search here …</string>
    <string name="title_button_check_out">Check out</string>
    <string name="title_your_inbox">Your inbox</string>
    <string name="title_what_s_your_email_address">What’s your email address?</string>
    <string name="title_button_create_account">Create account</string>
    <string name="titile_button_login">Login</string>
    <string name="title_and_what_s_your_name">And what’s your name?</string>
    <string name="title_done_njust_choice_a_password">Just choose a password.</string>
    <string name="title_button_done">Done!</string>
    <string name="title_welcome_back">Welcome back.</string>
    <string name="titile_button_login_to_your_account">Login to your account</string>
    <string name="title_is_item_available">Is the item available?</string>
    <string name="title_active">Active</string>
    <string name="title_name_and_description">Name and description</string>
    <string name="title_images_gallery">Images gallery</string>
    <string name="title_asking_price">Asking price</string>
    <string name="title_location">Location</string>
    <string name="title_your_listings">Your listings</string>
    <string name="title_start_to_make_money_from_your_items">Start to make money from your items.</string>
    <string name="title_button_add_first_item">Add first item</string>
    <string name="title_add_item">+ Add Item</string>
    <string name="title_send_a_meesage_to_owner">Send a message to owner</string>
    <string name="title_send_request">Send request</string>
    <string name="title_all">All</string>
    <string name="title_renting">Renting</string>
    <string name="title_lending">Listing</string>
    <string name="title_archive">Archive</string>
    <string name="title_verify_your_phone">Verify your phone</string>
    <string name="title_please_enter_the_code_we_texted_to_your_number">Please enter the code we texted to your number</string>
    <string name="title_seconds_to_resend">seconds to resend</string>
    <string name="title_did_not_get_the_code_yet">Did not get the code yet?</string>
    <string name="title_resend">Resend</string>
    <string name="title_please_enter_your_phone">Please enter your phone</string>
    <string name="title_we_will_text_you_a_5_digit_code_to_verify_your_phone_number">We will text you a 4 digit code to verify your phone number.</string>
    <string name="title_add_few_images_from_your_item_please_use_clear_image_from_proper_angle">Add few images from your item. please use good quality and clear image…</string>
    <string name="title_button_next">Next</string>
    <string name="title_tell_about_your_item">Tell about your item</string>
    <string name="title_button_set_your_location">Set your Location</string>
    <string name="title_we_will_not_show_your_exact_address_to_users">We will not show your exact address to users.</string>
    <string name="title_search_your_location">Search your Location</string>
    <string name="title_button_set_location">Save</string>
    <string name="title_set_your_asking_price">Set your asking price.</string>
    <string name="title_logout">Log out</string>
    <string name="error_set_price">please set price</string>
    <string name="error_add_image">add images</string>
    <string name="title_borrow_day">Borrow day</string>
    <string name="title_return_day">Return day</string>
    <string name="title_per_day">Per day</string>
    <string name="title_per_week">Per week</string>
    <string name="title_per_month">Per month</string>
    <string name="title_pers_day">/d</string>
    <string name="title_pers_week">/w</string>
    <string name="title_pers_month">/m</string>
    <string name="title_add_images_of_item">Add images of item</string>
    <string name="title_add_new_image">Add new image</string>
    <string name="title_phone_number">Phone number</string>
    <string name="title_please_input_the_price_you_ask_for_renting_out_the_item">Please input the price you ask for renting out the item.</string>
    <string name="title_you_have_not_any_item_yet">You have not any item yet.</string>
    <string name="title_select_category">Select category</string>
    <string name="error_set_location">Select location</string>
    <string name="button_decline">Decline</string>
    <string name="button_accept">Accept</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_finish">Finish</string>
    <string name="text_per_day">Per day</string>
    <string name="text_complete_your_profile">Complete your profile</string>
    <string name="title_complete_profile_description">To complete your profile and start using Ronaker features, please complete the steps below.</string>
    <string name="title_add_profile_image">Add profile image</string>
    <string name="title_add_and_verify_phone_number">Add and verify phone number</string>
    <string name="title_add_a_payment_method">Add a payment method</string>
    <string name="title_verify_your_identity">Verify your Identity</string>
    <string name="title_add_a_identity_document">Add a identity document</string>
    <string name="title_please_upload_one_of_your_identity_document_to_authentication">Please upload one of your identity document to authentication.</string>
    <string name="title_done">Done</string>
    <string name="title_enter_your_card_details">Enter your card details</string>
    <string name="title_card_number">Card number</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_select_item_category">Select item category</string>
    <string name="title_edit_profile">Edit profile</string>
    <string name="title_complete_profile">Complete your profile</string>
    <string name="title_setting">Settings</string>
    <string name="title_categories">Category</string>
    <string name="text_you_have_not_any_order_hear">You have not any order here</string>
    <string name="title_order">Orders</string>
    <string name="text_not_found_item">Nothing found any item</string>
    <string name="button_start_renting">Start renting</string>
    <string name="title_deactive">Deactivated</string>
    <string name="text_rejected">Rejected</string>
    <string name="text_pending">Pending</string>
    <string name="title_email_verification">Verify your email</string>
    <string name="title_notification">Notifications</string>
    <string name="title_download_user_data">Download user data</string>
    <string name="title_change_language">Change language</string>
    <string name="title_support">Support</string>
    <string name="title_favorites">Saved</string>
    <string name="text_clear">Clear</string>
    <string name="text_add_a_profile_image">Add a profile image</string>
    <string name="text_please_upload_a_image_of_you_for_identify_you">Please upload a photo of you for identification</string>
    <string name="text_add_a_image">Add a image</string>
    <string name="text_your_request_sent">Your request has been sent.</string>
    <string name="text_are_you_sure">Are you sure to log out?</string>
    <string name="text_send_a_instruction_to_who_rent_your_item">Send a instruction to who rent your item</string>
    <string name="text_why_decline_this_order">Why do you want to decline this order?</string>
    <string name="text_finish_order">Finish order</string>
    <string name="text_please_make_sure_your_product_is_functioning_properly_and_delivered_to_you_without_damage">Please pickup the item at provided address and ensure that the rented goods are functioning properly.\nFees for the item should be paid before pressed “Start renting” button.</string>
    <string name="text_start_renting_instruction">Renting instruction</string>
    <string name="text_please_ensure_that_the_rented_goods_are_functioning_properly">Please confirm, that the rented item is functioning properly.</string>
    <string name="text_accept_and_start_renting">Next step</string>
    <string name="text_payments_terms">I agree to Ronaker\&apos;s &quot;Terms &amp; Conditions&quot; &amp; &quot;Privacy Policy&quot;.</string>
    <string name="text_enter_your_invite_code">Enter your invite code</string>
    <string name="text_invite_code">Invite code (Optional)</string>
    <string name="text_repeat_your_password">Repeat your password</string>
    <string name="text_repeat">Repeat password</string>
    <string name="text_enter_title">Enter title</string>
    <string name="text_title">Title</string>
    <string name="text_item_description">Describe your item like model or color and…</string>
    <string name="text_description">Description</string>
    <string name="text_select_item_category">Select item category</string>
    <string name="text_category">Category</string>
    <string name="text_select_item_sub_category">Select item sub-category</string>
    <string name="text_sub_category">sub-category</string>
    <string name="text_this_password_is_too_short_it_must_contain_at_least_8_characters">This password is too short. It must contain at least 8 characters.</string>
    <string name="text_this_password_is_entirely_numeric">This password is entirely numeric.</string>
    <string name="text_choose_new_password_to_reset_password">Choose new password to reset password</string>
    <string name="text_the_password_and_repeat_password_must_same">The password and repeat password must be the same.</string>
    <string name="text_reset_password">Reset password</string>
</resources>