<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.ronaker.app.ui.addProduct.AddProductViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="80dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_default"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginRight="@dimen/margin_default"
                    android:gravity="start"
                    android:text="@string/title_select_category"
                    android:textAppearance="@style/TextAppearance.Heading.1"
                    android:textColor="@color/colorTextDark"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.ronaker.app.utils.view.InputComponent
                    android:id="@+id/category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_default"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="@dimen/margin_default"
                    android:onClick="@{()->viewModel.onClickSelectCategory()}"
                    app:inputMutableText="@{viewModel.getProductCategoryTitle()}"
                    app:input_hint="@string/text_select_item_category"
                    app:input_is_alert="false"

                    app:input_mode="NoneEditable"
                    app:input_title="@string/text_category"
                    app:input_transparent="false"
                    app:input_validation_mode="NONE"
                    app:layout_constraintTop_toBottomOf="@id/title" />


                <com.ronaker.app.utils.view.InputComponent
                    android:id="@+id/subCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_default"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="@dimen/margin_default"
                    android:onClick="@{()->viewModel.onClickSelectSubCategory()}"
                    android:visibility="gone"
                    app:inputMutableText="@{viewModel.getProductSubCategoryTitle()}"
                    app:input_hint="@string/text_select_item_sub_category"
                    app:input_is_alert="false"
                    app:input_mode="NoneEditable"

                    app:input_title="@string/text_sub_category"
                    app:input_transparent="false"
                    app:input_validation_mode="NONE"
                    app:layout_constraintTop_toBottomOf="@id/category"
                    app:mutableVisibility="@{viewModel.getProductSubCategoryVisibility()}" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.ronaker.app.utils.view.ButtonComponent
            android:id="@+id/next_button"
            style="@style/Button.accent"
            android:layout_width="160dp"
            android:layout_marginEnd="@dimen/margin_default"

            android:layout_marginBottom="16dp"
            android:onClick="@{()->viewModel.onClickCategoryNext()}"
            android:text="@string/title_button_next"
            app:buttonType="Text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            app:loadingColor="@color/white"
            app:mutableButtonLoading="@{viewModel.getLoadingButton()}" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>