<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ronaker.app.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:focusable="true"
            android:id="@+id/touch"

            android:focusableInTouchMode="true"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UselessLeaf" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            app:layout_constraintBottom_toTopOf="@id/next_button"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/touch"
            android:layout_height="0dp"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_default"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginRight="@dimen/margin_default"
                    android:gravity="start"
                    android:text="@string/title_what_s_your_email_address"
                    android:textAppearance="@style/TextAppearance.Heading.1"
                    android:textColor="@color/colorTextLight"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.ronaker.app.utils.view.InputComponent
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_default"
                    android:layout_marginTop="40dp"

                    android:layout_marginRight="@dimen/margin_default"
                    android:autofillHints="emailAddress"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    app:input_hint="@string/email_hint"
                    app:input_regex="^\\w+([-+.']\\w+)*@\\w+([-.]\\w+)*\\.\\w+([-.]\\w+)*$"
                    app:input_title="@string/email"
                    app:input_transparent="true"
                    app:input_validation_mode="AUTO"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    tools:ignore="UnusedAttribute" />




                <com.ronaker.app.utils.view.InputComponent
                    android:id="@+id/invite_input"
                    android:layout_width="0dp"

                    android:minWidth="180dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="36dp"

                    android:layout_marginRight="36dp"
                    android:imeOptions="actionDone"
                    android:inputType="textCapCharacters"
                    app:input_hint="@string/text_enter_your_invite_code"
                    app:input_regex="^.{2,}$"
                    app:input_title="@string/text_invite_code"
                    app:input_transparent="true"
                    app:input_validation_mode="AUTO"
                    android:visibility="gone"

                    app:inputMutableText="@{viewModel.getInviteCodeText()}"
                    app:layout_constraintTop_toBottomOf="@id/email_input"
                    tools:ignore="UnusedAttribute"
                    tools:layout_editor_absoluteX="@dimen/margin_default" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>



        <CheckBox
            android:layout_width="wrap_content"
            android:id="@+id/privacy"
            app:layout_constraintStart_toStartOf="parent"
            app:buttonTint="@color/white"
            android:layout_marginTop="4dp"
            android:layout_marginStart="@dimen/margin_default"
            app:layout_constraintTop_toTopOf="@id/next_button"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_width="0dp"
            android:id="@+id/privacy_text"
            android:textColor="@color/colorTextLight"
            app:layout_constraintStart_toEndOf="@id/privacy"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="@dimen/margin_half"
            android:textColorLink="@color/colorTextLinkLight"
            android:layout_marginStart="8dp"
            android:text="@string/text_payments_terms"
            app:layout_constraintTop_toTopOf="@id/next_button"
            app:layout_constraintEnd_toStartOf="@id/next_button"
            android:layout_height="wrap_content"/>


        <ImageButton
            android:id="@+id/next_button"
            style="@style/Button.circle.accent"
            android:contentDescription="@string/title_button_next"
            android:onClick="@{()->viewModel.onClickLoginEmail(emailInput.getText().toString(),emailInput.checkValid(),inviteInput.getText().toString())}"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>